# sitsfeats.py

./: CMakeLists.txt  README.md  pyproject.toml
examples/: basic.py  data.csv
scripts/: build-wheels.bat  build-wheels.sh
sitsfeats/: __init__.py  feats.py  registry.py
sitsfeats/metrics/: __init__.py  basic.py  polars.py  utils.py
src/: basic.cpp  module.cpp
