[tool.poetry]
name = "sitsfeats.py"
version = "0.1.0"
description = "Efficient Python package for extracting metrics from satellite image time series"
authors = ["Felipe Carlos <efelipecarlos@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "sitsfeats"}]

homepage = "https://github.com/m3nin0-labs/sitsfeats.py"
repository = "https://github.com/m3nin0-labs/sitsfeats.py"
keywords = [
    "satellite",
    "time-series",
    "features",
    "metrics",
    "remote-sensing"
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

[project]
name = "sitsfeats.py"
version = "0.1.0"
description = "Efficient Python package for extracting metrics from satellite image time series"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

authors = [
    {name = "Felipe Carlos", email = "efelipecarlos@gmail.com"}
]

keywords = [
    "satellite",
    "time-series",
    "features",
    "metrics",
    "remote-sensing"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "numpy>=1.26.4",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.13",
    "pytest>=7.4.4",
    "pre-commit>=3.6.0",
]

[tool.poetry.dependencies]
python = "^3.11"
pybind11 = "^2.12.0"
numpy = "^1.26.4"

[tool.poetry.group.dev.dependencies]
scikit-build-core = "^0.9.4"
ruff = "^0.1.13"
pytest = "^7.4.4"
pre-commit = "^3.6.0"

[tool.isort]
profile = "black"
line_length = 88
skip_glob = [ "docs", "notes" ]

[tool.ruff]
select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "UP",  # pyupgrade
  "I",   # isort
  "N",   # pep8 naming
  "PL",  # pylint
]

[build-system]
requires = [
    "scikit-build-core>=0.9.4",
    "pybind11>=2.12.0",
    "cmake>=3.15",
    "ninja",
    "wheel",
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
# Build configuration for scikit-build-core
wheel.expand-macos-universal-tags = true
cmake.version = ">=3.15"
cmake.args = []

# Manifest configuration for source distributions
sdist.include = [
    "README.md",
    "LICENSE",
    "CMakeLists.txt",
    "pyproject.toml",
    "src/**/*.cpp",
    "src/**/*.h",
    "src/**/*.hpp",
    "examples/**/*.py",
    "examples/**/*.csv",
]

sdist.exclude = [
    "__pycache__",
    "*.pyc",
    "*.pyo",
    "*.so",
    "*.dylib",
    "*.dll",
    ".git*",
    "build",
    "dist",
    "*.egg-info",
]
